@@ -1,0 +1,3 @@
+<HTML>
+<BODY>
+<Response><ErrorCode>400</ErrorCode><ErrorText>No items on a scale</ErrorText></Response>
