@@ -1,0 +1,3 @@
+<HTML>
+<BODY>
+<Response><ErrorCode>0</ErrorCode><ErrorText>success</ErrorText><Option><Description>USPS Priority Mail</Description><DeliveryTime>1-3 business days</DeliveryTime><Price>8.00</Price></Option><Option><Description>UPS Ground</Description><DeliveryTime>1-5 business days</DeliveryTime><Price>12.34</Price></Option><Option><Description>UPS 2nd Day Air</Description><DeliveryTime>2 business days</DeliveryTime><Price>21.86</Price></Option><Option><Description>UPS Next Day Air Saver</Description><DeliveryTime>1 business day</DeliveryTime><Price>36.05</Price></Option></Response>
